# pyroll-plugin-template

./: README.md  hatch.toml  pyproject.toml
docs/: .latexmkrc  PyRollDocs.cls  docs.tex  model.md  usage.md
pyroll/plugin/: __init__.py
pyroll/sample_plugin/: __init__.py
