[tool.poetry]
name = "pyroll-<plugin-name>"
version = "1.0.0"
description = "Plugin for PyRoll providing ..."
authors = [
]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">= 3.9, <3.11"
pyroll = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
