[tool.poetry]
name = "pyroll-<plugin-name>" # insert the name of yout plugin here
version = "2.0.0a" # major version must equal the major version of pyroll-core
description = "Plugin for PyRoll providing ..." # edit the description
authors = [
]
license = "BSD-3-Clause" # may be changed to your wishes
packages = [
    { include = "pyroll" } # place your package in the pyroll namespace
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
pyroll-core = "^2.0.0a"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pygments = "^2.14.0" # for syntax highlighting in LaTeX docs, remove if not needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
