[project]
name = "pyroll-plugin-name" # insert the name of yout plugin here
description = "Plugin for PyRoll providing ..." # edit the description
authors = [
    { name = "Your Name", email = "yourmail@server.com" }
]
license = "BSD-3-Clause" # may be changed to your wishes
requires-python = ">=3.9, <4.0"
dependencies = [
    "pyroll-core ~= 2.0a",
]

dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
